first commit with paragon updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <app-intro></app-intro>
 
-<app-companies></app-companies>
+<app-paragon></app-paragon>
 
 <app-services></app-services>
 
@@ -10,7 +10,7 @@
 
 <app-faq></app-faq>
 
-<app-portfolio></app-portfolio>
+<app-about></app-about>
 
 <app-contact></app-contact>
 
