--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -8,19 +8,35 @@
     <div class="row pt-2 pb-2 mt-0 mb-3">
       <div class="col-md-6 border-right">
         <div class="bg-white p-3">
-          <h2 class="fw-bold text-capitalize text-center">
-            Our Services Range From Residential to Commercial to Industrial Anywhere Anytime
+          <h2 class="fw-bold text-capitalize text-center text-md-end">
+            We offer a comprehensive range of electrical services tailored to meet
+            the diverse needs of our clients.
           </h2>
         </div>
       </div>
       <div class="col-md-6">
-        <div class="bg-white p-4 text-start">
+        <div class="bg-white p-4 text-center text-md-start">
           <p class="fw-light">
-            Lorem ipsum dolor sit amet consectetur architecto magni,
-            dicta maxime laborum temporibus dolorem esse doloremque illo quas nisi enim molestias.
-            Tempore ducimus molestiae in dolore enim.
+            Our licensed electricians specialize in: <br>
+            - New Home Builds <br>
+            - Residential Upgrades and Renovations <br>
+            - Installation of Potlights and Hot Tubs <br>
+            - Permit Acquisition Services <br>
+            - Commercial Electrical Solutions <br>
+            - Electrical Vehicle Charging Station Installation <br><br>
           </p>
         </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+        <p class="text-center">
+          With a commitment to quality and safety, we bring expertise to every project, ensuring that your
+          electrical needs are met with precision and care. Discover the Paragon advantage—your trusted partner
+          for all things electrical.
+        </p>
+
       </div>
     </div>
   </div>
@@ -45,7 +61,7 @@
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__pic">
-          <img src="/assets/images/services/service-1.png" alt="marketing illustration" class="img-fluid">
+          <img src="/assets/images/services/residential.png" alt="marketing illustration" class="img-fluid">
         </div>
       </div>
     </div>
@@ -53,7 +69,7 @@
     <div class="row">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
         <div class="services__pic">
-          <img src="/assets/images/services/service-2.png" alt="web development illustration" class="img-fluid">
+          <img src="/assets/images/services/commercial.png" alt="web development illustration" class="img-fluid">
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
@@ -89,7 +105,7 @@
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__pic">
-          <img src="/assets/images/services/service-3.png" alt="cloud hosting illustration" class="img-fluid">
+          <img src="/assets/images/services/industrial.png" alt="cloud hosting illustration" class="img-fluid">
         </div>
       </div>
     </div>
