--- a/src/app/components/intro/intro.component.scss
+++ b/src/app/components/intro/intro.component.scss
@@ -1,8 +1,8 @@
 @use '../../../scss/variables' as v;
-@use '../../../scss/components/mixins' as *;
+@use '../../../scss/components/mixins' as m;
 
 .intro-section {
-  @include gradient;
+  @include m.gradient;
   padding: 10rem 0 0 0;
   width: 100%;
   height: 100%;
