--- a/src/app/components/services/services.component.scss
+++ b/src/app/components/services/services.component.scss
@@ -3,7 +3,8 @@
 
 .services {
   position: relative;
-  padding: 1rem 0;
+  padding-top: 4rem;
+  padding-bottom: 1rem;
 
   &__content {
     padding: 1rem;
