--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,7 +1,7 @@
 // MY THEME COLORS
-$purple-dark:  #9926f0;
-$purple-light:  #BB6EF5;
-$pink:    #d122e3;
+$blue:  #000099;
+$light-blue:    #0618F9;
+$yellow: #FFC907;
 $footer: #151414;
 
 $white: #fff;
@@ -13,8 +13,9 @@ $gray-600: #6c757d;
 // #######################################
 
 
-$primary:       $purple-dark;
-$secondary:     $pink;
+$primary:       $blue;
+$secondary:     $yellow;
+$tertiary: $light-blue;
 
 // ACCORDION OVERRIDES
 $accordion-padding-y:                     1.5rem;// LEAVE THE PADDING-Y TO DEFAULT
