--- a/src/scss/components/_mixins.scss
+++ b/src/scss/components/_mixins.scss
@@ -2,7 +2,7 @@
 
 // GRADIENT MIXIN
 @mixin gradient {
-    background: linear-gradient(to right, rgba(v.$primary, 0.95), rgba(v.$secondary, 0.95));
+    background: linear-gradient(to right, rgba(v.$primary, 0.95), rgba(v.$tertiary, 0.95));
 }
 
 // ABSOLUTE CENTER
