Added more changes

--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,5 +1,5 @@
 <section id="faq" class="faq">
-  <div class="container">
+  <div class="container pt-5">
     <div class="row text-center">
       <h1 class="display-3 fw-bold text-uppercase">faq</h1>
       <div class="heading-line"></div>
@@ -13,12 +13,12 @@
           <div class="accordion-item shadow mb-3">
             <h2 class="accordion-header" id="headingOne">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                What are the main features?
+                Is Paragon Electric Ontario fully Licensed and Insured?
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the first item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Yes</strong>, Paragon Electric Ontario Inc. is fully licensed with a Master Electrician Certificate, and we carry comprehensive insurance up to $5 Million to ensure the safety and protection of our clients.
               </div>
             </div>
           </div>
@@ -26,12 +26,12 @@
           <div class="accordion-item shadow mb-3">
             <h2 class="accordion-header" id="headingTwo">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                do i have to pay again after trial
+                Is Paragon Electric ESA Certified?
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Absolutely</strong>. We are ESA certified, assuring you that our work meets the highest safety standards and adheres to the regulations set by the Electrical Safety Authority in Ontario.
               </div>
             </div>
           </div>
@@ -39,12 +39,12 @@
           <div class="accordion-item shadow mb-3">
             <h2 class="accordion-header" id="headingThree">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                How can I get started after trial?
+                Do you handle pulling permits for electrical projects in Ontario?
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                <strong>Yes</strong>, Paragon Electric Ontario Inc. can assist in obtaining the necessary permits for your electrical projects, ensuring all work is carried out in compliance with local regulations.
               </div>
             </div>
           </div>
@@ -52,12 +52,77 @@
           <div class="accordion-item shadow mb-3">
             <h2 class="accordion-header" id="headingFour">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                Can I be refunded if am not satisfied?
+                What types of projects do you specialize in?
               </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
               <div class="accordion-body">
-                <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                We specialize in a wide range of projects, including new home builds, residential upgrades, commercial services, installations of hot tubs, lighting and electrical vehicle charging stations.
+              </div>
+            </div>
+          </div>
+          <!-- ACCORDION ITEM 5 -->
+          <div class="accordion-item shadow mb-3">
+            <h2 class="accordion-header" id="headingFive">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                Do you install generators and GenerLinks?
+              </button>
+            </h2>
+            <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Yes, we specialize in the installation of generators and GenerLinks, ensuring that your electrical systems are equipped to handle power outages and emergencies effectively.
+              </div>
+            </div>
+          </div>
+          <!-- ACCORDION ITEM 6 -->
+          <div class="accordion-item shadow mb-3">
+            <h2 class="accordion-header" id="headingSix">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                How can I request a quote or meeting for my project?
+              </button>
+            </h2>
+            <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Requesting a quote is easy! Simply contact our founder Joe Messina, directly at 613-265-3330, and he will be happy to assist you with a free estimate. You can also text message or email at paragonelectricontario&#64;gmail.com
+              </div>
+            </div>
+          </div>
+          <!-- ACCORDION ITEM 7 -->
+          <div class="accordion-item shadow mb-3">
+            <h2 class="accordion-header" id="headingSeven">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                What areas do you serve?
+              </button>
+            </h2>
+            <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                We proudly serve the Greater Ottawa Area, bringing our expertise in both commercial and residential electrical services to the local community.
+              </div>
+            </div>
+          </div>
+          <!-- ACCORDION ITEM 8 -->
+          <div class="accordion-item shadow mb-3">
+            <h2 class="accordion-header" id="headingEight">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                Do you handle emergency repairs?
+              </button>
+            </h2>
+            <div id="collapseEight" class="accordion-collapse collapse" aria-labelledby="headingEight" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                <strong>Yes</strong>, depending on availability, we offer emergency response for urgent electrical issues. Contact us at 613-265-3330, and we'll try our best provide immediate assistance
+              </div>
+            </div>
+          </div>
+          <!-- ACCORDION ITEM 8 -->
+          <div class="accordion-item shadow mb-3">
+            <h2 class="accordion-header" id="headingNine">
+              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
+                Are you available for commercial projects?
+              </button>
+            </h2>
+            <div id="collapseNine" class="accordion-collapse collapse" aria-labelledby="headingNine" data-bs-parent="#accordionExample">
+              <div class="accordion-body">
+                Yes, Paragon Electric is well-equipped to handle commercial electrical projects, offering services such as wiring, lighting installations, and system maintenance.
               </div>
             </div>
           </div>
