--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -15,15 +15,8 @@
       </div>
       <!-- START THE CONTENT FOR THE VIDEO -->
       <div class="col-md-6 intros text-end">
-        <div class="video-box">
-          <img src="/assets/images/arts/intro-5.png" alt="video illutration" class="img-fluid">
-          <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
-            <span>
-              <i class="fas fa-play-circle"></i>
-            </span>
-            <span class="border-animation border-animation--border-1"></span>
-            <span class="border-animation border-animation--border-2"></span>
-          </a>
+        <div class="video-box mt-4 mt-md-0">
+          <img src="assets/images/services/industrial.png" alt="video illutration" class="img-fluid">
         </div>
       </div>
     </div>
