--- a/src/app/components/paragon/paragon.component.html
+++ b/src/app/components/paragon/paragon.component.html
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-12 text-center">
-        <img src="/assets/images/logo-full.png" alt="marketing illustration" class="img-fluid">
+        <img src="assets/images/logo-full.png" alt="marketing illustration" class="img-fluid">
       </div>
     </div>
   </div>
