--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -18,12 +18,12 @@
         <div class="bg-white p-4 text-center text-md-start">
           <p class="fw-light">
             Our licensed electricians specialize in: <br>
-            - New Home Builds <br>
-            - Residential Upgrades and Renovations <br>
-            - Installation of Potlights and Hot Tubs <br>
-            - Permit Acquisition Services <br>
-            - Commercial Electrical Solutions <br>
-            - Electrical Vehicle Charging Station Installation <br><br>
+            - New Home Builds.<br>
+            - Residential Upgrades and Renovations.<br>
+            - Installation of Hot Tubs, Pool Equipment, <br>
+            - Generators and GenerLinks.<br>
+            - Commercial Electrical Solutions.<br>
+            - Electrical Vehicle Charging Station Installation.<br><br>
           </p>
         </div>
       </div>
@@ -50,26 +50,22 @@
           <div class="icon d-block fas fa-paper-plane"></div>
           <h3 class="display-3--title mt-1">Residential</h3>
           <p class="lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-            doloremque autem quibusdam blanditiis harum alias hic accusantium
-            maxime atque ratione magni repellat?
+            Residential builds and retrofit. Panel upgrades, lighting, home theatre setup. Hot tubs and pool
+            equipment hookup. Generators and Generlink.
           </p>
-          <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
         <div class="services__pic">
-          <img src="/assets/images/services/residential.png" alt="marketing illustration" class="img-fluid">
+          <img src="assets/images/services/residential.png" alt="marketing illustration" class="img-fluid">
         </div>
       </div>
     </div>
     <!-- START THE WEB DEVELOPMENT CONTENT  -->
     <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-start">
+      <div class="col-lg-6 col-md-6 d-none d-md-block services mt-4 text-start">
         <div class="services__pic">
-          <img src="/assets/images/services/commercial.png" alt="web development illustration" class="img-fluid">
+          <img src="assets/images/services/commercial.png" alt="web development illustration" class="img-fluid">
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
@@ -77,37 +73,17 @@
           <div class="icon d-block fas fa-code"></div>
           <h3 class="display-3--title mt-1">Commercial</h3>
           <p class="lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-            doloremque autem quibusdam blanditiis harum alias hic accusantium
-            maxime atque ratione magni repellat?
+            All commercial needs from retrofit to new build. Panel installation or upgrade, transformers,
+            service equipment. Lighting design, Power and controls for elevators, fire pumps, fire alarm systems.
           </p>
-          <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
         </div>
       </div>
-    </div>
-    <!-- START THE CLOUD HOSTING CONTENT  -->
-    <div class="row">
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4">
-        <div class="services__content">
-          <div class="icon d-block fas fa-cloud-upload-alt"></div>
-          <h3 class="display-3--title mt-1">Industrial</h3>
-          <p class="lh-lg">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi, impedit rem,
-            doloremque autem quibusdam blanditiis harum alias hic accusantium
-            maxime atque ratione magni repellat?
-          </p>
-          <button type="button" class="rounded-pill btn-rounded border-primary">Learn more
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
-        </div>
-      </div>
-      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 services mt-4 text-end">
+      <div class="col-12 d-md-none">
         <div class="services__pic">
-          <img src="/assets/images/services/industrial.png" alt="cloud hosting illustration" class="img-fluid">
+          <img src="assets/images/services/commercial.png" alt="web development illustration" class="img-fluid">
         </div>
       </div>
     </div>
+
   </div>
 </section>
