--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -8,6 +8,8 @@
     margin: 0;
     border: 0.1rem solid rgba(v.$white, 0.6);
     background-color: v.$white;
+    text-decoration: none;
+    text-align: center;
     display: inline-block;
 
     span {
