--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark menu shadow fixed-top">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="/assets/images/logo.png" alt="logo image">
+      <img src="assets/images/logo.png" alt="logo image">
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -15,12 +15,12 @@
         <li class="nav-item"><a class="nav-link" href="#contact">contact</a>
         </li>
       </ul>
-      <button type="button" class="rounded-pill btn-rounded">
+      <a href="tel:16132653330" class="rounded-pill btn-rounded">
         {{ PHONE_NUMBER }}
         <span>
             <i class="fas fa-phone-alt"></i>
           </span>
-      </button>
+      </a>
     </div>
   </div>
 </nav>
