--- a/src/app/components/testimonials/testimonials.component.html
+++ b/src/app/components/testimonials/testimonials.component.html
@@ -12,13 +12,14 @@
       <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <!-- CAROUSEL ITEM 1 -->
+
+          <!-- CAROUSEL ITEM 2 -->
           <div class="carousel-item active">
             <!-- testimonials card  -->
             <div class="testimonials__card">
               <p class="lh-lg">
                 <i class="fas fa-quote-left"></i>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat aut consequatur illo animi optio exercitationem doloribus eligendi iusto atque repudiandae. Distinctio.
+                Joe and his team retrofitted our entire basement suite, upgraded our panel, and delivered as promise, so grateful we called Paragon Electric!
                 <i class="fas fa-quote-right"></i>
                 <span class="d-block ratings p-1">
                   <i class="fas fa-star"></i>
@@ -31,22 +32,20 @@
             </div>
             <!-- client picture  -->
             <div class="testimonials__picture">
-              <img src="/assets/images/testimonials/client-1.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
+              <img src="assets/images/testimonials/client-2.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
             </div>
             <!-- client name & role  -->
             <div class="testimonials__name">
-              <h3>Patrick Muriungi</h3>
-              <p class="fw-light">CEO & founder</p>
+              <h3>Sheila M.</h3>
+              <p class="fw-light">Orleans</p>
             </div>
           </div>
-          <!-- CAROUSEL ITEM 2 -->
           <div class="carousel-item">
             <!-- testimonials card  -->
             <div class="testimonials__card">
               <p class="lh-lg">
                 <i class="fas fa-quote-left"></i>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat aut consequatur illo animi optio exercitationem doloribus eligendi iusto atque repudiandae. Distinctio.
+                Paragon installed our hot tub for us, Joe was very easy to deal with, quoted under multiple competitors, showed up when he promised, and it's been working great for us ever since, very happy customer!
                 <i class="fas fa-quote-right"></i>
                 <span class="d-block ratings p-1">
                   <i class="fas fa-star"></i>
@@ -59,12 +58,12 @@
             </div>
             <!-- client picture  -->
             <div class="testimonials__picture">
-              <img src="/assets/images/testimonials/client-2.jpg" alt="client-2 picture" class="rounded-circle img-fluid">
+              <img src="assets/images/testimonials/kirk.jpg" alt="client-1 picture" class="rounded-circle img-fluid">
             </div>
             <!-- client name & role  -->
             <div class="testimonials__name">
-              <h3>Joy Marete</h3>
-              <p class="fw-light">Finance Manager</p>
+              <h3>Kirk D.</h3>
+              <p class="fw-light">Kanata</p>
             </div>
           </div>
           <!-- CAROUSEL ITEM 3 -->
@@ -73,8 +72,7 @@
             <div class="testimonials__card">
               <p class="lh-lg">
                 <i class="fas fa-quote-left"></i>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat aut consequatur illo animi optio exercitationem doloribus eligendi iusto atque repudiandae. Distinctio.
+                  We had Paragon install our GenerLink, they had it completed in only 1 day.  Thank you Joe and team, will be calling you for any future electrical work.
                 <i class="fas fa-quote-right"></i>
                 <span class="d-block ratings p-1">
                   <i class="fas fa-star"></i>
@@ -87,42 +85,15 @@
             </div>
             <!-- client picture  -->
             <div class="testimonials__picture">
-              <img src="/assets/images/testimonials/client-3.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
+              <img src="assets/images/testimonials/client-3.jpg" alt="client-3 picture" class="rounded-circle img-fluid">
             </div>
             <!-- client name & role  -->
             <div class="testimonials__name">
-              <h3>ClaireBelle Zawadi</h3>
-              <p class="fw-light">Global brand manager</p>
+              <h3>Claire Z.</h3>
+              <p class="fw-light">Manotick</p>
             </div>
           </div>
           <!-- CAROUSEL ITEM 4 -->
-          <div class="carousel-item">
-            <!-- testimonials card  -->
-            <div class="testimonials__card">
-              <p class="lh-lg">
-                <i class="fas fa-quote-left"></i>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeat aut consequatur illo animi optio exercitationem doloribus eligendi iusto atque repudiandae. Distinctio.
-                <i class="fas fa-quote-right"></i>
-                <span class="d-block ratings p-1">
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                  <i class="fas fa-star"></i>
-                </span>
-              </p>
-            </div>
-            <!-- client picture  -->
-            <div class="testimonials__picture">
-              <img src="/assets/images/testimonials/client-4.jpg" alt="client-4 picture" class="rounded-circle img-fluid">
-            </div>
-            <!-- client name & role  -->
-            <div class="testimonials__name">
-              <h3>Uhuru Kenyatta</h3>
-              <p class="fw-light">C.E.O & Founder</p>
-            </div>
-          </div>
         </div>
         <div class="text-center">
           <button class="btn btn-outline-light fas fa-long-arrow-alt-left me-2"
